[tool.poetry]
name = "cosmos-sdk"
version = "0.1.0"
description = "Python GRPC client for Cosmos-SDK"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.48.0"
googleapis-common-protos = "^1.56.4"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.48.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
